--- a/package.json
+++ b/package.json
@@ -75,5 +75,9 @@
     "storybook": "^8.4.7",
     "typescript": "^5.2.2",
     "vite": "^5.2.0"
+  },
+  "publishConfig": {
+    "access": "public",
+    "registry": "https://registry.npmjs.org/"
   }
 }
